Optimisations including: - Add font-display: swap to prevent text invisible during font loading - Add theme-color for both light and dark modes to better support iOS Safari browser - Share button will be visible at first and will go hidden if browser doesn't support it

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -3,6 +3,7 @@
     src: url('../assets/fonts/Atkinson-Hyperlegible-Regular-102a.woff2') format('woff2'), url('../assets/fonts/Atkinson-Hyperlegible-Regular-102.woff') format('woff');
     font-weight: 400;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
     src: url('../assets/fonts/Atkinson-Hyperlegible-Italic-102a.woff2') format('woff2'), url('../assets/fonts/Atkinson-Hyperlegible-Italic-102.woff') format('woff');
     font-weight: 400;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
     src: url('../assets/fonts/Atkinson-Hyperlegible-Bold-102a.woff2') format('woff2'), url('../assets/fonts/Atkinson-Hyperlegible-Bold-102.woff') format('woff');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
     src: url('../assets/fonts/Atkinson-Hyperlegible-BoldItalic-102a.woff2') format('woff2'), url('../assets/fonts/Atkinson-Hyperlegible-BoldItalic-102.woff') format('woff');
     font-weight: bold;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
