--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,7 +13,7 @@
   --dark-button-background: #222;
   --dark-poole-001: hsl(200, 3%, 12%);
   --dark-poole-002: hsl(0, 0%, 85%);
-  --dark-poole-link-color: rgb(252, 165, 34);
+  --dark-poole-link-color: #fca522;
   --dark-poole-link-hover: #fff;
 
   --red: #fa5252;
